ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Intelligence_Report__c/Intelligence_Report__c.object-meta.xml
<CustomObject>
    <label>Intelligence Report</label>
    <nameField>
        <displayFormat>Intel-{000}</displayFormat>
        <label>Intelligence Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Intelligence Reports</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>