ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Intelligence_Report__c/fields/Active_User__c.field-meta.xml
<CustomField>
    <fullName>Active_User__c</fullName>
    <formula>CreatedBy.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active User</label>
    <type>Checkbox</type>
</CustomField>