ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Intelligence_Report__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3-Tabs</fullName>
            </value>
            <value>
                <fullName>Hi and Ridge</fullName>
            </value>
            <value>
                <fullName>Ice &amp; Water</fullName>
            </value>
            <value>
                <fullName>Laminates</fullName>
            </value>
            <value>
                <fullName>Leading Edge</fullName>
            </value>
            <value>
                <fullName>Underlayment</fullName>
            </value>
            <value>
                <fullName>Adhesives/Primers</fullName>
            </value>
            <value>
                <fullName>AquaBarrier</fullName>
            </value>
            <value>
                <fullName>Asphalt</fullName>
            </value>
            <value>
                <fullName>Coverboards</fullName>
            </value>
            <value>
                <fullName>Felts</fullName>
            </value>
            <value>
                <fullName>ISO</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
            <value>
                <fullName>Mod Bit</fullName>
            </value>
            <value>
                <fullName>Vapour Retarders</fullName>
            </value>
            <value>
                <fullName>Category 1</fullName>
                <isActive>false</isActive>
                <label>Category 1</label>
            </value>
            <value>
                <fullName>Category 2</fullName>
                <isActive>false</isActive>
                <label>Category 2</label>
            </value>
            <value>
                <fullName>Category 3</fullName>
                <isActive>false</isActive>
                <label>Category 3</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>