ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Intelligence_Report__c/fields/Colour__c.field-meta.xml
<CustomField>
    <fullName>Colour__c</fullName>
    <label>Colour</label>
    <length>255</length>
    <type>Text</type>
</CustomField>