ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Intelligence_Report__c/fields/Count_of_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Line_Items__c</fullName>
    <description>Count of all line items.  If the report is not a Product Issues report, it cannot be submitted without line items</description>
    <label>Count of Line Items</label>
    <summaryForeignKey>Intelligence_Report_Line_Item__c.Intelligence_Report__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>