ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Intelligence_Report__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Division</label>
    <type>Text</type>
</CustomField>