ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Intelligence_Report__c/fields/Intel_Report_User__c.field-meta.xml
<CustomField>
    <fullName>Intel_Report_User__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Intel Report User</label>
    <referenceTo>Intel_Report_User__c</referenceTo>
    <relationshipLabel>Intelligence Reports</relationshipLabel>
    <relationshipName>Intelligence_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>