ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Intelligence_Report__c/fields/PriorValueRecordTypeName__c.field-meta.xml
<CustomField>
    <fullName>PriorValueRecordTypeName__c</fullName>
    <label>PriorValueRecordTypeName</label>
    <length>25</length>
    <type>Text</type>
</CustomField>