ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Intelligence_Report__c/fields/Producing_Plant__c.field-meta.xml
<CustomField>
    <fullName>Producing_Plant__c</fullName>
    <label>Producing Plant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Brampton</fullName>
            </value>
            <value>
                <fullName>Calgary</fullName>
            </value>
            <value>
                <fullName>Canroof</fullName>
            </value>
            <value>
                <fullName>CRC ISO</fullName>
            </value>
            <value>
                <fullName>Hawkesbury</fullName>
            </value>
            <value>
                <fullName>High River ISO</fullName>
            </value>
            <value>
                <fullName>Hillsboro</fullName>
            </value>
            <value>
                <fullName>IG East</fullName>
            </value>
            <value>
                <fullName>Kankakee</fullName>
            </value>
            <value>
                <fullName>Sumas</fullName>
            </value>
            <value>
                <fullName>Sylacauga</fullName>
            </value>
            <value>
                <fullName>Wilmington</fullName>
            </value>
            <value>
                <fullName>Plant 1</fullName>
                <isActive>false</isActive>
                <label>Plant 1</label>
            </value>
            <value>
                <fullName>Plant 2</fullName>
                <isActive>false</isActive>
                <label>Plant 2</label>
            </value>
            <value>
                <fullName>Plant 3</fullName>
                <isActive>false</isActive>
                <label>Plant 3</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>