ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Intelligence_Report__c/fields/Record_Creator_Division__c.field-meta.xml
<CustomField>
    <fullName>Record_Creator_Division__c</fullName>
    <formula>CASE(CreatedBy.Profile.Id, &quot;00e36000000aweZ&quot;, &quot;CACS&quot;, 
&quot;00e36000001KI1w&quot;, &quot;CACS&quot;, 
&quot;00e36000001KI1x&quot;, &quot;CACS&quot;, 
&quot;00e36000000aweZ&quot;, &quot;CACS&quot;, 
&quot;00e36000000ax4i&quot;, &quot;CARS&quot;, 
&quot;00e36000000awea&quot;, &quot;CARS&quot;, 
&quot;00e36000000aweb&quot;, &quot;CARS&quot;, 
&quot;00e36000001baau&quot;, &quot;USRS&quot;, 
&quot;00e36000001baaz&quot;, &quot;USRS&quot;, 
&quot;00e36000001bab4&quot;, &quot;USRS&quot;, 
&quot;IT&quot; 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Creator Division</label>
    <type>Text</type>
</CustomField>