ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Intelligence_Report__c/fields/Record_Type_Formula__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Formula__c</fullName>
    <formula>IF( TEXT(Status__c)  &lt;&gt; &quot;Submitted&quot;, RecordType.Name, IF(ISBLANK(PriorValueRecordTypeName__c), RecordType.Name,  PriorValueRecordTypeName__c))</formula>
    <label>Record Type</label>
    <type>Text</type>
</CustomField>