ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Intelligence_Report__c/fields/Report_Type__c.field-meta.xml
<CustomField>
    <fullName>Report_Type__c</fullName>
    <description>Only used for Product Issues reports</description>
    <label>Report Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>