ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Intelligence_Report__c/fields/Run_Tape_Code__c.field-meta.xml
<CustomField>
    <fullName>Run_Tape_Code__c</fullName>
    <label>Run #/Tape Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>