ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Intelligence_Report__c/recordTypes/Canadian_Residential.recordType-meta.xml
<RecordType>
    <fullName>Canadian_Residential</fullName>
    <active>true</active>
    <label>Canadian Residential</label>
</RecordType>