ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Intelligence_Report__c/recordTypes/Product_Issues_Report.recordType-meta.xml
<RecordType>
    <fullName>Product_Issues_Report</fullName>
    <active>true</active>
    <label>Product Issues Report</label>
</RecordType>