ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Intelligence_Report__c/recordTypes/Submitted_Intel_Report.recordType-meta.xml
<RecordType>
    <fullName>Submitted_Intel_Report</fullName>
    <active>true</active>
    <label>Submitted Intel Report</label>
</RecordType>