ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Intelligence_Report__c/recordTypes/Submitted_Product_Issues_Report.recordType-meta.xml
<RecordType>
    <fullName>Submitted_Product_Issues_Report</fullName>
    <active>true</active>
    <label>Submitted Product Issues Report</label>
</RecordType>