ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Intelligence_Report__c/recordTypes/US_Commercial.recordType-meta.xml
<RecordType>
    <fullName>US_Commercial</fullName>
    <active>true</active>
    <label>US Commercial</label>
</RecordType>