ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Intelligence_Report__c/recordTypes/US_Residential.recordType-meta.xml
<RecordType>
    <fullName>US_Residential</fullName>
    <active>true</active>
    <label>US Residential</label>
</RecordType>