ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Intelligence_Report__c/validationRules/No_Changes_Once_Submitted.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Changes_Once_Submitted</fullName>
    <active>true</active>
    <description>A submitted Intel Report can no longer be changed after the email has gone out</description>
    <errorConditionFormula>IF(
AND(
Text(Status__c) = &quot;Submitted&quot;,
TEXT(PRIORVALUE(Status__c)) = &quot;Submitted&quot;
),
TRUE,
FALSE
)</errorConditionFormula>
    <errorMessage>Once an intelligence report has been submitted it cannot be changed</errorMessage>
</ValidationRule>