ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Intelligence_Report__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Report_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Intel_Report_User__c</columns>
    <columns>Record_Type_Formula__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Report_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>