ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Intelligence_Report__c/listViews/My_Intel_Reports.listView-meta.xml
<ListView>
    <fullName>My_Intel_Reports</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Record_Type_Formula__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>My Intel Reports</label>
</ListView>